gccida/c2/process_reg_param
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_reg_param/src/integrate.c:1070:26: error: use of undeclared identifier 'machine_mode'
v6 = copy_to_mode_reg( ( machine_mode)BYTE2( v7), copy); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_reg_param/src/integrate.c:1086:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)copy->fld[0]; 
                       ^~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/process_reg_param/src/obj/integrate.o] Error 1
